Bug Fix: 454948 - Directory traversal vulnerability